--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.beanbroker'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1-SNAPSHOT-dev'
 sourceCompatibility = '1.8'
 
 configurations {
