--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.beanbroker'
 
-version = '0.0.3-SNAPSHOT-dev'
+version = '1.0.3-SNAPSHOT-master'
 
 sourceCompatibility = '1.8'
 
